[workspace]
resolver = "2"
members = [
    "bin/chain_proof",
    # "guests/mock-da",
    "guests",
    "crates/bitcoin_header_chain",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
homepage = "alpenlabs.io"
publish = false
repository = "https://github.com/alpenlabs/alpen-rollup.git"
authors = []
license = "MIT OR Apache-2.0"

[workspace.dependencies]
borsh = {version = "1.5.0", features = ["derive"]}
anyhow = { version = "1.0.68", default-features = false }
bech32 = { version = "0.9.1", default-features = false }
async-trait = "0.1.71"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
sha2 = { version = "0.10.6", default-features = false }
hex = { version = "0.4.3", default-features = false, features = [
    "alloc",
    "serde",
] }
jsonrpsee = { version = "0.20.1", features = ["jsonrpsee-types"] }
pin-project = { version = "1.1.3" }

serde = { version = "1.0.192", default-features = false, features = [
    "alloc",
    "derive",
] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
bincode = "1.3.3"
thiserror = "1.0.50"
tracing = { version = "0.1.40", default-features = false }

# risc0
risc0-zkvm = { version = "0.21.0" }
risc0-zkvm-platform = { version = "0.21.0" }
risc0-zkp = "0.21.0"
risc0-circuit-rv32im = "0.21.0"
risc0-build = "0.21.0"
bonsai-sdk = "0.6.1"
bytemuck = "1.14.3"

# sov sdk
sov-rollup-interface = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "180ecd0e17d4573c996c416db9555f90aff3f5a6", version = "0.3" }

# bitcoin
bitcoin = { version = "0.30.1", features = ["serde", "rand", "std"] }
k256 = { version = "=0.13.1", features = [
    "arithmetic",
    "serde",
    "expose-field",
    "std",
    "ecdsa",
], default_features = false }


[patch.crates-io]
# Placing these patch statement in the workspace Cargo.toml will add RISC Zero SHA-256 and bigint
# multiplication accelerator support for all downstream usages of the following crates.
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.6-risczero.0" }
k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.1-risczero.1" }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.2-risczero.0" }
