[package]
name = "guest-bitcoin"
version = "0.1.0"
edition = "2021"
homepage = "alpenlabs.io"
publish = false
resolver = "2"

[workspace]

[dependencies]
risc0-zkvm = { version = "0.21.0", default-features = false, features = [
    "std",
] }
ahash = { version = "=0.8.6" }
bitcoin-header-chain = { path = "../../crates/bitcoin_header_chain" }
bincode = "1.3.3"
borsh = "1.3"
